--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,11 +20,15 @@
                     <ul class="navbar-nav flex-grow-1">
                         
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FMixto">Fracc. Mixtas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FMixto">Fracciones</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FMixtoM">Fracc. Mixtas Multiplicacion</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FMixtoM">Fracc. Multiplicacion</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FSuma">Fracc. Suma</a>
+                        </li>
+                        
                     </ul>
                 </div>
             </div>
