--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,28 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    
+    <div class="container">
+        <div>
+            Para convertir a fracciones mixtas has click  <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="FMixto">aqui</a>o en la siguiente imagen
+        </div>
+        
+        <div>
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="FMixto"><img src="https://i.ytimg.com/vi/0QoxQ1YIRwQ/maxresdefault.jpg" class="img-fluid"></a>
+        </div>
+        <div>
+            Para multiplicar fracciones has click  <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="FMixtoM">aqui</a>o en la siguiente imagen
+        </div>
+        <div>
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="FMixtoM"><img src="https://i.ytimg.com/vi/-ytm1uOGOXk/maxresdefault.jpg" class="img-fluid"></a>
+        </div>
+        <div>
+            Para sumar fracciones has click  <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="FSuma">aqui</a>o en la siguiente imagen
+         </div>
+         <div>
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="FSuma"><img src="https://i.ytimg.com/vi/LVHo5xvsvO0/maxresdefault.jpg" class="img-fluid"></a>
+         </div>
+        
+    </div>
+   
 </div>
