--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,8 +7,7 @@
     <div class="container">
         <div>
             Para convertir a fracciones mixtas has click  <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="FMixto">aqui</a>o en la siguiente imagen
-        </div>
-        
+        </div>        
         <div>
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="FMixto"><img src="https://i.ytimg.com/vi/0QoxQ1YIRwQ/maxresdefault.jpg" class="img-fluid"></a>
         </div>
@@ -20,10 +19,22 @@
         </div>
         <div>
             Para sumar fracciones has click  <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="FSuma">aqui</a>o en la siguiente imagen
-         </div>
-         <div>
+        </div>
+        <div>
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="FSuma"><img src="https://i.ytimg.com/vi/LVHo5xvsvO0/maxresdefault.jpg" class="img-fluid"></a>
-         </div>
+        </div>
+        <div>
+            Para restar fracciones has click  <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="FResta">aqui</a>o en la siguiente imagen
+        </div>
+        <div>
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="FResta"><img src="https://i.ytimg.com/vi/FRPijN0ie3U/maxresdefault.jpg" class="img-fluid"></a>
+        </div>
+        <div>
+            Para dividir fracciones has click  <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="FDivision">aqui</a>o en la siguiente imagen
+        </div>
+        <div>
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="FDivision"><img src="https://i.ytimg.com/vi/RNtvQitNbLk/maxresdefault.jpg" class="img-fluid"></a>
+        </div>
         
     </div>
    
