--- a/Views/Home/FDivision.cshtml
+++ b/Views/Home/FDivision.cshtml
@@ -2,7 +2,7 @@
 
 <main role="main">
 
-    <form asp-action="FMixtoM">
+    <form asp-action="FDivision">
         <div>
             <label for="form-control">
                 Ingrese el numerador:
@@ -17,9 +17,9 @@
             <input asp-for="denominador" class="form-control">
         </div>
         <br>
-        x
-        <br><br>
-        
+        ÷
+        <br>
+        <br>
         <div>
             <label for="form-control">
                 Ingrese el numerador:
@@ -33,8 +33,8 @@
             </label>
             <input asp-for="denominador2" class="form-control">
         </div>
+        
         <br>
-
         @Html.DisplayFor(model => model.Mensaje)
         <br>
         <br>
