--- a/Views/Home/FMixto.cshtml
+++ b/Views/Home/FMixto.cshtml
@@ -1,5 +1,7 @@
 @model Matematicas.Models.FMixto
-
+@{
+    ViewData["Title"] = "Num. mixto";
+}
 <main role="main">
 
     <form asp-action="FMixto">
