--- a/Views/Home/FMixtoM.cshtml
+++ b/Views/Home/FMixtoM.cshtml
@@ -1,5 +1,7 @@
 @model Matematicas.Models.FMixto
-
+@{
+    ViewData["Title"] = "Multiplicacion";
+}
 <main role="main">
 
     <form asp-action="FMixtoM">
