--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Matematicas</title>
+    <link rel="shortcut icon" href="https://yt3.ggpht.com/ytc/AKedOLQAiFrRH5kca3CfAbfDW5TuYu8opH_Htte7bStLaw=s900-c-k-c0x00ffffff-no-rj">
+    <title>@ViewData["Title"] </title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
